<resources>
    <string name="app_name">Chooser</string>
    <string name="why_headline_clear">Maybe you have to forgotten to ask a question</string>
    <string name="setting_setting">Settings</string>
    <string name="hint_text">Text</string>
    <string name="make_decision">Make a decision</string>
    <string name="setting_history">Story</string>
    <string name="InputAsk">Enter your question</string>
    <string name="clear_historu_button">delete history</string>
    <string name="text_clear_history">This place is where the history of your decisions will be stored.\n\nAt the moment this place is empty!</string>
    <string name="You_variant">Decision:</string>
    <string name="You_question">Your question:</string>
    <string name="Share_text">The Chooser app helped me in question:  \</string>
    <string name="Share_text_2">\nAdopted decision: \ </string>
    <string name="Share_text_3">\nTry it yourself!\n</string>
    <string name="Share_title">Share the result</string>
    <string name="History_clear">Deleted history </string>
    <string name="action_share">Share</string>
    <string name="add_variant">Add options</string>
    <string name="add">Add</string>
    <string name="variant">option</string>
    <string name="delete">Delete</string>
    <string name="rate_app">Rate our app</string>
    <string name="contact_developer">Contact the developer</string>
    <string name="takegallery">Select photo</string>
    <string name="takephoto">Take a picture</string>
    <string name="emptyImageview">It is unable to find image!</string>
    <string name="possible_mistakes">ATTENTION\nThe App is in early access.\nWe apologize for any possible problems.</string>
    <string name="loading_text_0">Guessing on the cards</string>
    <string name="loading_text_1">Roll the dice</string>
    <string name="loading_text_2">Ask the fortune teller</string>
    <string name="loading_text_3">Calculate the probability theory</string>
    <string name="loading_text_4">Check the chart</string>
</resources>
